# brogameagent

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml
build_cuda/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  brogameagent.sln  brogameagent.vcxproj  brogameagent.vcxproj.filters  brogameagentConfig.cmake  brogameagentConfig.cmake.in  cmake_install.cmake  mcts_bench.vcxproj  mcts_bench.vcxproj.filters  nn_check.vcxproj  nn_check.vcxproj.filters  nn_exit.vcxproj  nn_exit.vcxproj.filters  nn_pretrain_ae.vcxproj  nn_pretrain_ae.vcxproj.filters  nn_pretrain_ae_gpu.vcxproj  nn_pretrain_ae_gpu.vcxproj.filters  nn_train_value.vcxproj  nn_train_value.vcxproj.filters  replay_query.vcxproj  replay_query.vcxproj.filters
build_cuda/examples/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  example_01_hello_world.vcxproj  example_01_hello_world.vcxproj.filters  example_02_nav_and_combat.vcxproj  example_02_nav_and_combat.vcxproj.filters  example_03_projectiles.vcxproj  example_03_projectiles.vcxproj.filters  example_04_obs_mask_reward.vcxproj  example_04_obs_mask_reward.vcxproj.filters  example_05_simulation.vcxproj  example_05_simulation.vcxproj.filters  example_06_snapshot_rollout.vcxproj  example_06_snapshot_rollout.vcxproj.filters  example_07_mcts_duel.vcxproj  example_07_mcts_duel.vcxproj.filters  example_08_decoupled_1v1.vcxproj  example_08_decoupled_1v1.vcxproj.filters  example_09_team_mcts.vcxproj  example_09_team_mcts.vcxproj.filters  example_10_layered_planner.vcxproj  example_10_layered_planner.vcxproj.filters  example_11_root_parallel.vcxproj  example_11_root_parallel.vcxproj.filters  example_12_record_and_read.vcxproj  example_12_record_and_read.vcxproj.filters  example_13_capabilities_demo.vcxproj  example_13_capabilities_demo.vcxproj.filters  example_14_fog_of_war.vcxproj  example_14_fog_of_war.vcxproj.filters  example_15_grid_corridor.vcxproj  example_15_grid_corridor.vcxproj.filters
build_cuda/tests/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  brogameagent_adam_test.vcxproj  brogameagent_adam_test.vcxproj.filters  brogameagent_gpu_adam_parity_test.vcxproj  brogameagent_gpu_adam_parity_test.vcxproj.filters  brogameagent_gpu_attention_parity_test.vcxproj  brogameagent_gpu_attention_parity_test.vcxproj.filters  brogameagent_gpu_concat_parity_test.vcxproj  brogameagent_gpu_concat_parity_test.vcxproj.filters  brogameagent_gpu_elementwise_parity_test.vcxproj  brogameagent_gpu_elementwise_parity_test.vcxproj.filters  brogameagent_gpu_embedding_parity_test.vcxproj  brogameagent_gpu_embedding_parity_test.vcxproj.filters  brogameagent_gpu_layer_attention_dispatch_test.vcxproj  brogameagent_gpu_layer_attention_dispatch_test.vcxproj.filters  brogameagent_gpu_layer_autoencoder_dispatch_test.vcxproj  brogameagent_gpu_layer_autoencoder_dispatch_test.vcxproj.filters  brogameagent_gpu_layer_feedforward_dispatch_test.vcxproj  brogameagent_gpu_layer_feedforward_dispatch_test.vcxproj.filters  brogameagent_gpu_layer_layernorm_adam_dispatch_test.vcxproj  brogameagent_gpu_layer_layernorm_adam_dispatch_test.vcxproj.filters  brogameagent_gpu_layer_layernorm_dispatch_test.vcxproj  brogameagent_gpu_layer_layernorm_dispatch_test.vcxproj.filters  brogameagent_gpu_layer_mha_dispatch_test.vcxproj  brogameagent_gpu_layer_mha_dispatch_test.vcxproj.filters  brogameagent_gpu_layer_transformer_block_dispatch_test.vcxproj  brogameagent_gpu_layer_transformer_block_dispatch_test.vcxproj.filters  brogameagent_gpu_layer_transformer_encoder_dispatch_test.vcxproj  brogameagent_gpu_layer_transformer_encoder_dispatch_test.vcxproj.filters  brogameagent_gpu_layernorm_parity_test.vcxproj  (+24 more)
examples/: 01_hello_world.cpp  02_nav_and_combat.cpp  03_projectiles.cpp  04_obs_mask_reward.cpp  05_simulation.cpp  06_snapshot_rollout.cpp  07_mcts_duel.cpp  08_decoupled_1v1.cpp  09_team_mcts.cpp  10_layered_planner.cpp  11_root_parallel.cpp  12_record_and_read.cpp  13_capabilities_demo.cpp  14_fog_of_war.cpp  15_grid_corridor.cpp  CMakeLists.txt  README.md
python/: README.md  bindings.cpp  example_train.py  record_from_checkpoint.py  selfplay_train.py  test_replay.bgar
scripts/: coverage.ps1
src/: action_mask.cpp  agent.cpp  avoidance.cpp  belief.cpp  capabilities.cpp  capability_set.cpp  generic_mcts.cpp  info_set_mcts.cpp  mcts.cpp  nav_grid.cpp  nav_mesh.cpp  observability.cpp  observation.cpp  perception.cpp  recorder.cpp  replay_reader.cpp  reward.cpp  scripted_minion_policy.cpp  simulation.cpp  steering.cpp  vec_simulation.cpp  world.cpp
tests/: CMakeLists.txt  test_adam.cpp  test_avoidance.cpp  test_main.cpp  test_nav_mesh.cpp  test_single_hero_net_tx.cpp  test_transformer.cpp
tests/gpu/: parity_helpers.h  test_exit_trainer_gpu.cpp  test_generic_trainer_batched_parity.cpp  test_gpu_adam.cpp  test_gpu_attention.cpp  test_gpu_batched.cpp  test_gpu_concat.cpp  test_gpu_elementwise.cpp  test_gpu_embedding.cpp  test_gpu_layernorm.cpp  test_gpu_linear.cpp  test_gpu_loss.cpp  test_gpu_mha.cpp  test_gpu_optim.cpp  test_gpu_reduce.cpp  test_gpu_softmax.cpp  test_gpu_tensor.cpp  test_inference_server.cpp  test_layer_attention_dispatch.cpp  test_layer_autoencoder_dispatch.cpp  test_layer_feedforward_dispatch.cpp  test_layer_layernorm_adam_dispatch.cpp  test_layer_layernorm_dispatch.cpp  test_layer_mha_dispatch.cpp  test_layer_transformer_block_dispatch.cpp  test_layer_transformer_encoder_dispatch.cpp  test_mcts_server.cpp  test_mcts_server_tx.cpp  test_policy_value_net_batched.cpp  test_single_hero_net_tx_batched.cpp  test_single_hero_net_tx_dispatch.cpp
tools/: mcts_bench.cpp  nn_check.cpp  nn_exit.cpp  nn_exit_gpu.cpp  nn_pretrain_ae.cpp  nn_pretrain_ae_gpu.cpp  nn_train_value.cpp  replay_query.cpp
(+619 files in other folders)
